--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^3.0.3",
         "admin-lte": "^3.2.0",
+        "jquery": "^3.6.1",
+        "vee-validate": "^4.6.7",
         "vue": "^3.2.37",
-        "vue-router": "^4.1.4"
+        "vue-router": "^4.1.4",
+        "yup": "^0.32.11"
     }
 }
